Adicionando informação 'dados mensais a tela de gráficos, a ser melhorada dps

--- a/Sprint3/Site/web-data-viz/public/PAGES/graficos.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/graficos.html
@@ -57,9 +57,10 @@
 
 
   <div class="box-title">
-    <h2 class="title2"> GRAFICOS
-      <!-- <h6 class="subtitle2">FLOWTECH</h6> -->
+       <h2 class="title2"> GRAFICOS
+       <h6 class="subtitle2">Dados mensais</h6>
     </h2>
+    
   </div>
   <div class="box-juncao">
   <div class="container2">
