--- a/Sprint3/Site/web-data-viz/public/PAGES/simulador.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/simulador.html
@@ -22,13 +22,12 @@
                 <li> <a href="../index.html#contato">Contato</a></li>
                 <li>|</li>
                 <li><u>Simulador Financeiro</u></li>
-                <a href="cadastro.html">
-                    <li class="bt"> CADASTRAR-SE</li>
-                </a>
-                <a href="login.html">
-                    <li class="bt"> LOGIN</li>
-                </a>
             </ul>
+
+            <div class="buttons-cadastro">
+                <button><a href="cadastro.html">CADASTRAR-SE</button></a>
+                <button><a href="login.html">LOGIN</button></a>
+              </div>
         </div>
     </div>
 
