--- a/Sprint3/Site/web-data-viz/public/index.html
+++ b/Sprint3/Site/web-data-viz/public/index.html
@@ -23,13 +23,11 @@
         <li>|</li>
         <li> <a href="PAGES/simulador.html">Simulador Financeiro</a></li>
         </ul>
-        <ul class="navbar">
-        <a href="PAGES/cadastro.html">
-          <li class="bt"> CADASTRAR-SE</li>
-        </a>
-        <a href="PAGES/login.html">
-          <li class="bt">LOGIN</li><a>
-      </ul>
+        
+        <div class="buttons-cadastro">
+          <button><a href="PAGES/cadastro.html">CADASTRAR-SE</button></a>
+          <button><a href="PAGES/login.html">LOGIN</button></a>
+        </div>
 
     </div>
   </div>
