Adicionando pagina de "ajuda"

--- a/Sprint3/Site/web-data-viz/public/PAGES/graficos.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/graficos.html
@@ -29,6 +29,8 @@
           <li><a><u>Gráficos</u></a></li>
           <li>|</li>
           <li> <a href="heatmap/heatmap.html">Heatmap</a></li>
+          <li>|</li>
+          <li><a href="../ajuda.html">Ajuda</a></li>
       </ul>
     </div>
   </div>
@@ -48,6 +50,7 @@
       <li> <a href="graficos.html">📊 Gráficos</a></li>
       <li> <a href="dashboard.html">🖥️ Dashboard</a></li>
       <li> <a href="heatmap/heatmap.html">🗺️ HeatMap </a></li>
+      <li><a href="ajuda.html">📞 Ajuda </a></li>
       <li> <a href="../index.html">Sair</a></li>
     </ul>
   </div>
