--- a/Sprint3/Site/web-data-viz/public/PAGES/heatmap/heatmap.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/heatmap/heatmap.html
@@ -37,6 +37,8 @@
           <li><a href="../graficos.html">Gráficos</a></li>
           <li>|</li>
           <li><u>Heatmap</u></li>
+          <li>|</li>
+          <li><a href="../ajuda.html">Ajuda</a></li>
         </ul>
       </div>
     </div>
@@ -54,6 +56,7 @@
             <li><a href="../graficos.html">📊 Gráficos</a></li>
             <li><a href="../dashboard.html">🖥️ Dashboard</a></li>
             <li><a href="heatmap.html">🗺️ HeatMap </a></li>
+            <li><a href="ajuda.html">📞 Ajuda </a></li>
             <li><a href="../../index.html">Sair</a></li>
           </ul>
         </div>
