--- a/Sprint3/Site/web-data-viz/public/PAGES/dashboard.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/dashboard.html
@@ -30,6 +30,8 @@
         <li><a href="graficos.html">Gráficos</a></li>
         <li>|</li>
         <li><a href="heatmap/heatmap.html">Heatmap</a></li>
+        <li>|</li>
+        <li><a href="../ajuda.html">Ajuda</a></li>
       </ul>
     </div>
   </div>
@@ -44,6 +46,7 @@
         <li><a href="graficos.html">📊 Gráficos</a></li>
         <li><a href="dashboard.html">🖥️ Dashboard</a></li>
         <li><a href="heatmap/heatmap.html">🗺️ HeatMap </a></li>
+        <li><a href="ajuda.html">📞 Ajuda </a></li>
         <li><a href="../index.html">Sair</a></li>
       </ul>
     </div>
