--- a/Sprint3/Site/web-data-viz/public/PAGES/perfil.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/perfil.html
@@ -29,7 +29,9 @@
             <li> <a href="graficos.html">Gráficos</a></li>
             <li>|</li>
             <li> <a href="heatmap/heatmap.html">Heatmap</a></li>
-        </ul>
+            <li>|</li>
+            <li><a href="../ajuda.html">Ajuda</a></li>
+          </ul>
       </div>
     </div>
     <div class="gap"></div>
@@ -41,6 +43,7 @@
             <li> <a href="graficos.html">📊 Gráficos</a></li>
             <li> <a href="dashboard.html">🖥️ Dashboard</a></li>
             <li> <a href="heatmap/heatmap.html">🗺️ HeatMap </a></li>
+            <li><a href="ajuda.html">📞 Ajuda </a></li>
             <li> <a href="../index.html">Sair</a></li>
           </ul>
         </div>
