Correção nos gráficos

--- a/Sprint3/Site/web-data-viz/public/PAGES/graficos.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/graficos.html
@@ -1116,13 +1116,12 @@ limpar();    var BL9Element = document.getElementById('BL9');
   };
 
   const labels5 = [
-    'Domingo',
-    'Segunda',
-    'Terça',
-    'Quarta',
-    'Quinta',
-    'Sexta',
-    'Sábado',
+  'Catraca',
+    'Escada Rolante 1',
+    'Escada Rolante 2',
+    'Escada Rolante 3',
+    'Passarela 1',
+    'Passarela 2'
   ];
 
   const data5 = {
@@ -1234,13 +1233,12 @@ limpar();    var BL9Element = document.getElementById('BL9');
   };
 
   const labels8 = [
-    'Domingo',
-    'Segunda',
-    'Terça',
-    'Quarta',
-    'Quinta',
-    'Sexta',
-    'Sábado',
+  'Catraca',
+    'Escada Rolante 1',
+    'Escada Rolante 2',
+    'Escada Rolante 3',
+    'Passarela 1',
+    'Passarela 2'
   ];
 
   const data8 = {
@@ -1351,13 +1349,12 @@ const labels10 = [
   };
 
   const labels11 = [
-  'Domingo',
-    'Segunda',
-    'Terça',
-    'Quarta',
-    'Quinta',
-    'Sexta',
-    'Sábado',
+  'Catraca',
+    'Escada Rolante 1',
+    'Escada Rolante 2',
+    'Escada Rolante 3',
+    'Passarela 1',
+    'Passarela 2'
   ];
 
   const data11 = {
@@ -1466,13 +1463,12 @@ const labels10 = [
   };
 
   const labels14 = [
-  'Domingo',
-    'Segunda',
-    'Terça',
-    'Quarta',
-    'Quinta',
-    'Sexta',
-    'Sábado',
+  'Catraca',
+    'Escada Rolante 1',
+    'Escada Rolante 2',
+    'Escada Rolante 3',
+    'Passarela 1',
+    'Passarela 2'
   ];
 
   const data14 = {
@@ -1583,13 +1579,12 @@ const labels10 = [
   };
 
   const labels17 = [
-  'Domingo',
-    'Segunda',
-    'Terça',
-    'Quarta',
-    'Quinta',
-    'Sexta',
-    'Sábado',
+  'Catraca',
+    'Escada Rolante 1',
+    'Escada Rolante 2',
+    'Escada Rolante 3',
+    'Passarela 1',
+    'Passarela 2'
   ];
 
   const data17 = {
@@ -1700,13 +1695,12 @@ const labels10 = [
   };
 
   const labels20 = [
-  'Domingo',
-    'Segunda',
-    'Terça',
-    'Quarta',
-    'Quinta',
-    'Sexta',
-    'Sábado',
+  'Catraca',
+    'Escada Rolante 1',
+    'Escada Rolante 2',
+    'Escada Rolante 3',
+    'Passarela 1',
+    'Passarela 2'
   ];
 
   const data20 = {
@@ -1817,13 +1811,12 @@ const labels10 = [
   };
 
   const labels23 = [
-  'Domingo',
-    'Segunda',
-    'Terça',
-    'Quarta',
-    'Quinta',
-    'Sexta',
-    'Sábado',
+  'Catraca',
+    'Escada Rolante 1',
+    'Escada Rolante 2',
+    'Escada Rolante 3',
+    'Passarela 1',
+    'Passarela 2'
   ];
 
   const data23 = {
@@ -1935,13 +1928,12 @@ const labels10 = [
   };
 
   const labels26 = [
-  'Domingo',
-    'Segunda',
-    'Terça',
-    'Quarta',
-    'Quinta',
-    'Sexta',
-    'Sábado',
+  'Catraca',
+    'Escada Rolante 1',
+    'Escada Rolante 2',
+    'Escada Rolante 3',
+    'Passarela 1',
+    'Passarela 2'
   ];
 
   const data26 = {
@@ -2050,14 +2042,12 @@ const labels10 = [
   };
 
   const labels29 = [
-  'Domingo',
-    'Segunda',
-    'Terça',
-    'Quarta',
-    'Quinta',
-    'Sexta',
-    'Sábado',
-  ];
+  'Catraca',
+    'Escada Rolante 1',
+    'Escada Rolante 2',
+    'Escada Rolante 3',
+    'Passarela 1',
+    'Passarela 2'  ];
 
   const data29 = {
     labels: labels29,
@@ -2163,13 +2153,12 @@ const labels10 = [
   };
 
   const labels32 = [
-  'Domingo',
-    'Segunda',
-    'Terça',
-    'Quarta',
-    'Quinta',
-    'Sexta',
-    'Sábado',
+  'Catraca',
+    'Escada Rolante 1',
+    'Escada Rolante 2',
+    'Escada Rolante 3',
+    'Passarela 1',
+    'Passarela 2'
   ];
 
   const data32 = {
@@ -2660,5 +2649,3 @@ const myChart10 = new Chart(
   
 </script>
 <!--------------------------------------------------------------------------
-
-
