Ajustando o style da tela Help

--- a/Sprint3/Site/web-data-viz/public/PAGES/ajuda.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/ajuda.html
@@ -56,9 +56,9 @@
         <h2>AJUDA</h2>
         <h6>FLOWTECH</h6>
       </div>
-        <h1>Nossos serviços de apoio ao usuário</h1>
-
-        <div class="box_helps"> 
+      <div class="box_fundo">
+      <h1>Nossos serviços de apoio ao usuário</h1>
+          <div class="box_helps"> 
             <div class="help_cli">
                 <a href="https://www.canva.com/design/DAGGX5wBcJw/CcKcabrdOC4vrVrJcHb4fg/edit?utm_content=DAGGX5wBcJw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
                     <div class="box_manual" >
@@ -83,6 +83,7 @@
                     </div>
                 </a>
             </div>
+        </div>
         </div>
       
 
