--- a/Sprint3/Site/web-data-viz/public/PAGES/heatmap/heatmap.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/heatmap/heatmap.html
@@ -206,7 +206,7 @@ function atualizarFeed() {
    points = [escada1, escada2, escada3, passarela1, passarela2, catraca];
 
    var data = {
-     max: max + max * dif,
+     max: (max / 2) + (max * dif),
      min: min,
      data: points,
    }
